force-app/main/default/objects/Account/fields/Act_according_to_OECD_guidelines__c.field-meta.xml
<CustomField>
    <fullName>Act_according_to_OECD_guidelines__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Act according to OECD guidelines</label>
    <type>Checkbox</type>
</CustomField>