force-app/main/default/objects/Account/fields/Activities__c.field-meta.xml
<CustomField>
    <fullName>Activities__c</fullName>
    <label>Activities</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>