force-app/main/default/objects/Account/fields/Activity_on_the_FMO_exclusion_list__c.field-meta.xml
<CustomField>
    <fullName>Activity_on_the_FMO_exclusion_list__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Activity on the FMO exclusion list</label>
    <type>Checkbox</type>
</CustomField>