force-app/main/default/objects/Account/fields/Additional_Comment__c.field-meta.xml
<CustomField>
    <fullName>Additional_Comment__c</fullName>
    <label>Additional Comment (Address)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>