force-app/main/default/objects/Account/fields/Additional_Comment_Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Additional_Comment_Billing_Address__c</fullName>
    <label>Additional Comment (Billing Address)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>