force-app/main/default/objects/Account/fields/Business_Unit_Owner__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit_Owner__c</fullName>
    <label>Business Unit Owner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Public Sector</fullName>
            </value>
            <value>
                <fullName>Private Sector</fullName>
            </value>
            <value>
                <fullName>Business Development, Strategy &amp; IESG</fullName>
            </value>
            <value>
                <fullName>Corporate Secretary, Communications,Public Affairs</fullName>
            </value>
            <value>
                <fullName>Secretariat</fullName>
            </value>
            <value>
                <fullName>Human Resources</fullName>
            </value>
            <value>
                <fullName>Risk,Compliance &amp; IESG</fullName>
            </value>
            <value>
                <fullName>Finance,Control &amp; Operations</fullName>
            </value>
            <value>
                <fullName>IT &amp; Change</fullName>
            </value>
            <value>
                <fullName>Legal &amp; Procurement</fullName>
            </value>
            <value>
                <fullName>Internal Audit</fullName>
            </value>
            <value>
                <fullName>Communications</fullName>
                <isActive>false</isActive>
                <label>Communications</label>
            </value>
            <value>
                <fullName>Finance</fullName>
                <isActive>false</isActive>
                <label>Finance</label>
            </value>
            <value>
                <fullName>Public Affairs</fullName>
                <isActive>false</isActive>
                <label>Public Affairs</label>
            </value>
            <value>
                <fullName>Strategy &amp; IESG</fullName>
                <isActive>false</isActive>
                <label>Strategy &amp; IESG</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>