force-app/main/default/objects/Account/fields/cm_Industry_Code__c.field-meta.xml
<CustomField>
    <fullName>cm_Industry_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Industry Code</label>
    <referenceTo>cm_Industry_Code__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>