force-app/main/default/objects/Account/fields/CoC_Number__c.field-meta.xml
<CustomField>
    <fullName>CoC_Number__c</fullName>
    <label>CoC Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>