force-app/main/default/objects/Account/fields/Contact_person_name__c.field-meta.xml
<CustomField>
    <fullName>Contact_person_name__c</fullName>
    <label>If contact with Dutch Embassy, name:</label>
    <length>100</length>
    <type>Text</type>
</CustomField>