force-app/main/default/objects/Account/fields/Contact_with_Dutch_Embassy_in_country_of__c.field-meta.xml
<CustomField>
    <fullName>Contact_with_Dutch_Embassy_in_country_of__c</fullName>
    <label>Contact Dutch Embassy in Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>