force-app/main/default/objects/Account/fields/Country_Contact_with_Dutch_Embassy__c.field-meta.xml
<CustomField>
    <fullName>Country_Contact_with_Dutch_Embassy__c</fullName>
    <label>Country Contact with Dutch Embassy?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>