force-app/main/default/objects/Account/fields/Debt__c.field-meta.xml
<CustomField>
    <fullName>Debt__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Debt</label>
    <referenceTo>LLC_BI__Debt__c</referenceTo>
    <relationshipLabel>Relationships</relationshipLabel>
    <relationshipName>Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>