force-app/main/default/objects/Account/fields/Financing_Need_Estimated_amount__c.field-meta.xml
<CustomField>
    <fullName>Financing_Need_Estimated_amount__c</fullName>
    <label>Financing Need(Estimated amount)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>