force-app/main/default/objects/Account/fields/Formal_CSR_Policy__c.field-meta.xml
<CustomField>
    <fullName>Formal_CSR_Policy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Formal CSR Policy</label>
    <type>Checkbox</type>
</CustomField>