force-app/main/default/objects/Account/fields/Gender__c.field-meta.xml
<CustomField>
    <fullName>Gender__c</fullName>
    <label>Title</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mrs</fullName>
            </value>
            <value>
                <fullName>Ms</fullName>
            </value>
            <value>
                <fullName>Mr</fullName>
            </value>
            <value>
                <fullName>Mx</fullName>
            </value>
            <value>
                <fullName>Dr</fullName>
            </value>
            <value>
                <fullName>Female</fullName>
                <isActive>false</isActive>
                <label>Female</label>
            </value>
            <value>
                <fullName>Male</fullName>
                <isActive>false</isActive>
                <label>Male</label>
            </value>
            <value>
                <fullName>Non-Binary</fullName>
                <isActive>false</isActive>
                <label>Non-Binary</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>