force-app/main/default/objects/Account/fields/Group_ID__c.field-meta.xml
<CustomField>
    <fullName>Group_ID__c</fullName>
    <label>Group ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>