force-app/main/default/objects/Account/fields/KYC_Comments__c.field-meta.xml
<CustomField>
    <fullName>KYC_Comments__c</fullName>
    <label>KYC Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>