force-app/main/default/objects/Account/fields/KYC_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>KYC_Due_Date__c</fullName>
    <label>KYC Due Date</label>
    <type>Date</type>
</CustomField>