force-app/main/default/objects/Account/fields/Legal_Entity_Name1__c.field-meta.xml
<CustomField>
    <fullName>Legal_Entity_Name1__c</fullName>
    <label>Legal Entity Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IIPP</fullName>
            </value>
            <value>
                <fullName>IID</fullName>
            </value>
            <value>
                <fullName>IIC</fullName>
            </value>
            <value>
                <fullName>IIG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>