force-app/main/default/objects/Account/fields/Legal_Firm__c.field-meta.xml
<CustomField>
    <fullName>Legal_Firm__c</fullName>
    <formula>IF(ISPICKVAL(Type, &apos;Legal/Law Firm&apos;), &apos;Yes&apos;, &apos;No&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Legal Firm?</label>
    <type>Text</type>
</CustomField>