force-app/main/default/objects/Account/fields/LoanUpdate__c.field-meta.xml
<CustomField>
    <fullName>LoanUpdate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LoanUpdate</label>
    <type>Checkbox</type>
</CustomField>