force-app/main/default/objects/Account/fields/Location_or_Branch_in_NL__c.field-meta.xml
<CustomField>
    <fullName>Location_or_Branch_in_NL__c</fullName>
    <label>Location or Branch in NL?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>