force-app/main/default/objects/Account/fields/NACE_Code_2__c.field-meta.xml
<CustomField>
    <fullName>NACE_Code_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NACE Code</label>
    <referenceTo>NACE_Code__c</referenceTo>
    <relationshipLabel>Relationships</relationshipLabel>
    <relationshipName>Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>