force-app/main/default/objects/Account/fields/NACE_Code__c.field-meta.xml
<CustomField>
    <fullName>NACE_Code__c</fullName>
    <label>NACE Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>