force-app/main/default/objects/Account/fields/NACE_Codes_List__c.field-meta.xml
<CustomField>
    <fullName>NACE_Codes_List__c</fullName>
    <formula>HYPERLINK(&quot;https://nacev2.com/en&quot;, &quot;NACE Codes List&quot;,&apos;_blank&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NACE Codes List</label>
    <type>Text</type>
</CustomField>