force-app/main/default/objects/Account/fields/Organisation_Located_in_Netherlands__c.field-meta.xml
<CustomField>
    <fullName>Organisation_Located_in_Netherlands__c</fullName>
    <label>Organisation Located in Netherlands?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>