force-app/main/default/objects/Account/fields/Organisation_Type__c.field-meta.xml
<CustomField>
    <fullName>Organisation_Type__c</fullName>
    <label>Organisation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Startups</fullName>
            </value>
            <value>
                <fullName>SME</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Financial Institution</fullName>
            </value>
            <value>
                <fullName>Special Purpose Vehicle​</fullName>
            </value>
            <value>
                <fullName>Sovereign​</fullName>
            </value>
            <value>
                <fullName>Investment Fund Debt​</fullName>
            </value>
            <value>
                <fullName>Investment Fund Equity​</fullName>
            </value>
            <value>
                <fullName>Holding company</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>