force-app/main/default/objects/Account/fields/Project_meets_OECD_guidelines__c.field-meta.xml
<CustomField>
    <fullName>Project_meets_OECD_guidelines__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Project meets OECD guidelines</label>
    <type>Checkbox</type>
</CustomField>