force-app/main/default/objects/Account/fields/Project_title__c.field-meta.xml
<CustomField>
    <fullName>Project_title__c</fullName>
    <label>Project title</label>
    <type>TextArea</type>
</CustomField>