force-app/main/default/objects/Account/fields/Relationship_status__c.field-meta.xml
<CustomField>
    <fullName>Relationship_status__c</fullName>
    <label>Relationship status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>