force-app/main/default/objects/Account/fields/Rijkscommissie__c.field-meta.xml
<CustomField>
    <fullName>Rijkscommissie__c</fullName>
    <label>Rijkscommissie?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>