force-app/main/default/objects/Account/fields/Sector_Industry__c.field-meta.xml
<CustomField>
    <fullName>Sector_Industry__c</fullName>
    <label>Sector/Industry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agriculture &amp; Food</fullName>
            </value>
            <value>
                <fullName>Climate &amp; Renewable Energy</fullName>
            </value>
            <value>
                <fullName>Health</fullName>
            </value>
            <value>
                <fullName>Sustainable manufacturing</fullName>
            </value>
            <value>
                <fullName>Water &amp; Infrastructure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>