force-app/main/default/objects/Account/fields/Teams_involved__c.field-meta.xml
<CustomField>
    <fullName>Teams_involved__c</fullName>
    <label>Teams involved</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Private SME</fullName>
            </value>
            <value>
                <fullName>Private M-LC</fullName>
            </value>
            <value>
                <fullName>Public</fullName>
            </value>
            <value>
                <fullName>BD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>