force-app/main/default/objects/Account/fields/World_Bank_Classification__c.field-meta.xml
<CustomField>
    <fullName>World_Bank_Classification__c</fullName>
    <label>World Bank Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LIC (Low income country)</fullName>
            </value>
            <value>
                <fullName>LMIC (Low middle income country)</fullName>
            </value>
            <value>
                <fullName>UMIC (Upper-middle income country)</fullName>
            </value>
            <value>
                <fullName>HIC (High income country)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>