force-app/main/default/objects/Account/recordTypes/Insurance_Firm.recordType-meta.xml
<RecordType>
    <fullName>Insurance_Firm</fullName>
    <active>true</active>
    <description>Select &quot;Insurance Firm&quot; to store details for a Insurance Firm record.</description>
    <label>Insurance Firm</label>
</RecordType>