force-app/main/default/objects/Account/recordTypes/Legal_Law_Firm.recordType-meta.xml
<RecordType>
    <fullName>Legal_Law_Firm</fullName>
    <active>true</active>
    <description>Select &quot;Legal/Law Firm&quot; to store details for a legal/law firm record.</description>
    <label>Legal/Law Firm</label>
</RecordType>