force-app/main/default/objects/Account/recordTypes/Vendor.recordType-meta.xml
<RecordType>
    <fullName>Vendor</fullName>
    <active>true</active>
    <description>Select &quot;Vendor&quot; if you are adding an attorney, appraiser, or other third party.</description>
    <label>Vendor</label>
</RecordType>