force-app/main/default/objects/Account/validationRules/Relationship_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Relationship_Type</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Type  , &apos;None&apos;)</errorConditionFormula>
    <errorMessage>Please make sure relationship type is not none.</errorMessage>
</ValidationRule>