force-app/main/default/objects/Account/listViews/LLC_BI__AllAccounts.listView-meta.xml
<ListView>
    <fullName>LLC_BI__AllAccounts</fullName>
    <filterScope>Everything</filterScope>
    <label>All Accounts</label>
</ListView>